--- a/web_app/templates/layout_bootstrap.html
+++ b/web_app/templates/layout_bootstrap.html
@@ -64,8 +64,8 @@
       <!-- FOOTER -->
       <div id="footer">
         <hr>
-        &copy; Copyright 2019 Prof. MJ Rossetti |
-        <a href="https://github.com/prof-rossetti/">source</a>
+        &copy; Copyright 2019 JSOLESBURY |
+        <a href="https://github.com/jsoles7/">source</a>
       </div>
     </div>
 
