improved home and about pages

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -5,6 +5,8 @@
 
     <h2>About</h2>
 
-    <p>This is a description of the app. Lorum ipsum.</p>
+    <p>This is a description of the app. This app seeks to allow users to get a weather forecast given 
+        their post code. Feel free to create a profile on this site in order to access every-day weather
+        forecasts!</p>
 
 {% endblock %}
