--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -4,6 +4,6 @@
 
     <h2>Home</h2>
 
-    <p>Welcome to my app! Lorum ipsum.</p>
+    <p>Welcome to my app! Feel free to either sign up or learn more about this webpage!</p>
 
 {% endblock %}
