added weather forecast integration to the web app so now the user can access weather forecast tools

--- a/web_app/templates/registration_form.html
+++ b/web_app/templates/registration_form.html
@@ -5,7 +5,7 @@
 
     <h2>New User Registration</h2>
 
-    <p>Sign up using the form below...</p>
+    <p>Sign up for daily weather report emails using the form below...</p>
 
     <form action="/users/create" method="POST">
 
